--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,16 +17,16 @@
 
   /*========== Font and typography ==========*/
   /*.5rem = 8px | 1rem = 16px ...*/
-  --body-font: 'Poppins', sans-serif;
-  --second-font: 'Butcherman', cursive;
+  --body-font: "Poppins", sans-serif;
+  --second-font: "Butcherman", cursive;
 
   --biggest-font-size: 2rem;
   --h1-font-size: 1.5rem;
   --h2-font-size: 1.25rem;
   --h3-font-size: 1rem;
-  --normal-font-size: .938rem;
-  --small-font-size: .813rem;
-  --smaller-font-size: .75rem;
+  --normal-font-size: 0.938rem;
+  --small-font-size: 0.813rem;
+  --smaller-font-size: 0.75rem;
 
   /*========== Font weight ==========*/
   --font-medium: 500;
@@ -46,8 +46,8 @@
     --h2-font-size: 1.5rem;
     --h3-font-size: 1.25rem;
     --normal-font-size: 1rem;
-    --small-font-size: .875rem;
-    --smaller-font-size: .813rem;
+    --small-font-size: 0.875rem;
+    --smaller-font-size: 0.813rem;
   }
 }
 
@@ -118,10 +118,10 @@ img {
   height: 100vh;
   object-fit: cover;
   mix-blend-mode: soft-light;
-  opacity: .5;
+  opacity: 0.5;
 }
 
-.shape__small, 
+.shape__small,
 .shape__big {
   position: absolute;
   background-color: var(--first-color);
@@ -138,63 +138,139 @@ img {
 .shape__big {
   width: 250px;
   height: 250px;
-  opacity: .8;
+  opacity: 0.8;
 }
 
 /*=============== HEADER & NAV ===============*/
 
+.header {
+  position: fixed;
+  width: 100%;
+  background: transparent;
+  top: 0;
+  left: 0;
+  z-index: var(--z-fixed);
+  transition: background 0.3s, box-shadow 0.3s;
+}
+
+.nav {
+  position: relative;
+  height: var(--header-height);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav__logo,
+.nav__toggle,
+.nav__close {
+  display: inline-flex;
+  color: var(--white-color);
+}
+
+.nav__logo {
+  align-items: center;
+  column-gap: 0.5rem;
+  font-weight: var(--font-medium);
+  transition: color 0.3s;
+}
+
+.nav__logo img {
+  width: 20px;
+}
+
+.nav__logo:hover {
+  color: var(--first-color);
+}
+
+.nav__toggle {
+  font-size: 1.25rem;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 767px) {
+  .nav__menu {
+    position: fixed;
+    top: -100%;
+    left: 0;
+    background-color: var(--body-color);
+    width: 100%;
+    box-shadow: 0 4px 8px hsla(22, 10%, 2%, 0.5);
+    padding-block: 3.5rem 3rem;
+    border-radius: 0 0 2rem 2rem;
+    transition: top 0.4s;
+  }
+}
+
+.nav__list {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  row-gap: 1.5rem;
+}
+
+.nav__link {
+  color: var(--white-color);
+  font-family: var(--second-font);
+  transition: color 0.4s;
+}
+
+.nav__link:hover {
+  color: var(--first-color);
+}
+
+.nav__close {
+  position: absolute;
+  top: 1rem;
+  right: 1.5rem;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+.nav__img {
+  width: 180px;
+  position: absolute;
+  top: 40%;
+  left: -3rem;
+}
 
 /* Show menu */
 
+.show-menu {
+  top: 0;
+}
 
 /* Change background header */
 
-
 /* Active link */
-
 
 /*=============== HOME ===============*/
 
-
 /* Star animation */
-
-
 
 /*=============== BUTTON ===============*/
 
-
 /*=============== CATEGORY ===============*/
-
 
 /*=============== ABOUT ===============*/
 
-
 /*=============== ITEMS ===============*/
-
 
 /*=============== PARTY ===============*/
 
-
 /*=============== FOOTER ===============*/
-
 
 /*=============== SCROLL BAR ===============*/
 
-
 /*=============== SCROLL UP ===============*/
 
-
 /* Show Scroll Up*/
-
 
 /*=============== BREAKPOINTS ===============*/
 /* For small devices */
 
-
 /* For medium devices */
 
-
 /* For large devices */
-
 
 /* For 2K resolutions (2048 x 1152) */
