--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -242,6 +242,11 @@ img {
 
 /* Change background header */
 
+.bg-header {
+  background-color: var(--body-color);
+  box-shadow: 0 4px 8px hsla(22, 10%, 2%, 0.4);
+}
+
 /* Active link */
 
 /*=============== HOME ===============*/
@@ -354,9 +359,92 @@ img {
   }
 }
 
+.home .shape__small {
+  top: -3rem;
+  left: -3rem;
+}
+
+.home .shape__big {
+  bottom: 5rem;
+  right: -10rem;
+}
+
 /*=============== BUTTON ===============*/
 
+.button {
+  display: inline-block;
+  background-color: var(--white-color);
+  padding: 1rem 1.5rem;
+  border-radius: 4rem;
+  color: var(--first-color);
+  font-weight: var(--font-semi-bold);
+  transition: background 0.3s, color 0.3s;
+}
+
+.button:hover {
+  background-color: var(--first-color);
+  color: var(--white-color);
+}
+
 /*=============== CATEGORY ===============*/
+
+.category {
+  position: relative;
+}
+
+.category__container {
+  padding-top: 4rem;
+  grid-template-columns: 228px;
+  justify-content: center;
+  row-gap: 6rem;
+}
+
+.category__card {
+  position: relative;
+  background-color: var(--container-color);
+  border-radius: 2rem;
+  padding: 4.5rem 2.25rem 2rem;
+  box-shadow: 0 4px 16px hsla(22, 10%, 2%, 0.3);
+  text-align: center;
+  transition: background 0.3s;
+}
+
+.category__img {
+  width: 120px;
+  position: absolute;
+  inset: 0;
+  margin: 0 auto;
+  top: -3.5rem;
+  transition: transform 0.3s;
+}
+
+.category__title {
+  font-size: var(--h3-font-size);
+  font-weight: var(--font-semi-bold);
+  color: var(--first-color);
+  margin-bottom: 0.5rem;
+}
+
+.category__description {
+  font-size: var(--small-font-size);
+}
+
+.category__star {
+  width: 40px;
+  position: absolute;
+  top: 3.5rem;
+  right: 0.5rem;
+  transform: rotate(15deg);
+}
+
+.category__card:hover .category__img {
+  transform: translateY(-0.5rem);
+}
+
+.category .shape__small {
+  top: 25rem;
+  left: -4rem;
+}
 
 /*=============== ABOUT ===============*/
 
