--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -485,7 +485,126 @@ img {
 
 /*=============== ITEMS ===============*/
 
+.items {
+  position: relative;
+}
+
+.items__container {
+  padding-top: 2rem;
+  grid-template-columns: repeat(2, 1fr);
+  justify-content: center;
+  gap: 4rem 1.5rem;
+}
+
+.items__card {
+  position: relative;
+  background-color: var(--container-color);
+  border-radius: 1.5rem;
+  padding: 4rem 1.25rem 1.25rem;
+  box-shadow: 0 4px 16px hsla(22, 10%, 2%, 0.3);
+  text-align: center;
+}
+
+.items__img {
+  width: 100px;
+  position: absolute;
+  inset: 0;
+  top: -2rem;
+  margin: 0 auto;
+  transition: transform 0.3s;
+}
+
+.items__name {
+  font-size: var(--normal-font-size);
+  font-weight: var(--font-medium);
+  margin-bottom: 0.25rem;
+}
+
+.items__price {
+  display: block;
+  font-weight: var(--font-semi-bold);
+  color: var(--first-color);
+  margin-bottom: 0.5rem;
+}
+
+.items__button {
+  display: inline-flex;
+  background-color: var(--first-color);
+  color: var(--white-color);
+  padding: 0.25rem 1.5rem;
+  border-radius: 4rem;
+  cursor: pointer;
+  transition: background 0.3s;
+  border: none;
+  outline: none;
+}
+
+.items__button i {
+  font-size: 1.25rem;
+}
+
+.items__button:hover {
+  background-color: var(--first-color-alt);
+}
+
+.items__card:hover .items__img {
+  transform: translateY(-0.5rem);
+}
+
+.items .shape__big {
+  bottom: -8rem;
+  right: -8rem;
+}
+
 /*=============== PARTY ===============*/
+
+.party {
+  position: relative;
+}
+
+.party__container {
+  row-gap: 5rem;
+}
+
+.party__container .section__title {
+  margin-bottom: 1rem;
+}
+
+.party__data {
+  text-align: center;
+}
+
+.party__description {
+  margin-bottom: 2rem;
+}
+
+.party__images {
+  position: relative;
+  justify-self: center;
+}
+
+.party__img {
+  width: 250px;
+}
+
+.party__star-1,
+.party__star-2 {
+  width: 50px;
+  position: absolute;
+  transform: rotate(15deg);
+}
+
+.party__star-1 {
+  top: -3rem;
+  left: -0.5rem;
+  animation: animate-star-1 5s infinite ease-in-out;
+}
+
+.party__star-2 {
+  right: -1.5rem;
+  bottom: 2rem;
+  animation: animate-star-2 5s infinite ease-in-out;
+}
 
 /*=============== FOOTER ===============*/
 
