--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -249,6 +249,10 @@ img {
 
 /* Active link */
 
+.active-link {
+  color: var(--first-color);
+}
+
 /*=============== HOME ===============*/
 
 .home {
@@ -722,9 +726,32 @@ img {
 
 /*=============== SCROLL BAR ===============*/
 
+.scrollup {
+  position: fixed;
+  right: 1rem;
+  bottom: -50%;
+  color: var(--first-color);
+  font-size: 1.1rem;
+  background-color: var(--container-color);
+  box-shadow: 0 4px 8px hsla(22, 10%, 2%, 0.6);
+  padding: 0.45rem;
+  border-radius: 0.35rem;
+  display: inline-flex;
+  z-index: var(--z-tooltip);
+  transition: bottom 0.3s, transform 0.3s;
+}
+
+.scrollup:hover {
+  transform: translateY(-0.25rem);
+}
+
 /*=============== SCROLL UP ===============*/
 
 /* Show Scroll Up*/
+
+.show-scroll {
+  bottom: 3rem;
+}
 
 /*=============== BREAKPOINTS ===============*/
 /* For small devices */
